# atay2d

./: .gitignore  Cargo.toml  README.md  index.html
resources/shaders/: shader.wgsl
src/: lib.rs  main.rs
