[package]
name = "atay2d"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.15.1"
winit = "0.28.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["Document", "Window", "Element"] }
wgpu = { version = "0.15.1", features = ["webgl"] }
